リンク修正

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
             <h3>福祉施設サイト（WP構築）</h3>
             <p>テーマファイルカスタマイズ ／ 記事一覧実装 ／ MEO対策</p>
-            <div class="to_detail-link"><a href="/work-wp01.html">詳細</a></div>
+            <div class="to_detail-link"><a href="work-wp01.html">詳細</a></div>
           </div>
           <!-- <div class="work-card">
             <img src="images/lp-thumb.jpg" alt="LPサムネ" />
@@ -56,7 +56,10 @@
 
     <footer>
       <div class="wrap">
-        <a class="link github" href="https://github.com/utough?tab=repositories"></a>
+        <a
+          class="link github"
+          href="https://github.com/utough?tab=repositories"
+        ></a>
         <a class="link mail" href="mailto:yutaskysazanami@gmail.com"></a>
       </div>
       <p>© 2025 加藤ユウタ</p>
