リンク変更

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
             </div>
             <h3>福祉施設サイト（WP構築）</h3>
             <p>テーマファイルカスタマイズ ／ 記事一覧実装 ／ MEO対策</p>
-            <div class="to_detail-link"><a href="work-wp01.html">詳細</a></div>
+            <div class="to_detail-link">
+              <a href="/front-portfolio/work-wp01.html">詳細</a>
+            </div>
           </div>
           <!-- <div class="work-card">
             <img src="images/lp-thumb.jpg" alt="LPサムネ" />
