リンク修正

--- a/index.html
+++ b/index.html
@@ -4,21 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>加藤ユウタ｜Web制作ポートフォリオ</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/front-portfolio/style.css" />
   </head>
   <body>
     <header>
       <h1>
         <span
           ><div class="logo-wrap">
-            <img src="./img/logo.png" alt="加藤ユウタ" /></div></span
+            <img
+              src="/front-portfolio/img/logo.png"
+              alt="加藤ユウタ"
+            /></div></span
         >｜Web制作
       </h1>
       <nav>
         <div class="contents-wrap navi">
           <a href="#works">制作実績</a>
-          <a href="/profile.html">プロフィール</a>
-          <a href="/contact/">お問い合わせ</a>
+          <a href="/front-portfolio/profile.html">プロフィール</a>
+          <a href="/front-portfolio/contact/">お問い合わせ</a>
         </div>
       </nav>
     </header>
@@ -38,7 +41,10 @@
           <h2>制作実績</h2>
           <div class="work-card">
             <div class="img-wrap">
-              <img src="img/wp-thumbnail.webp" alt="WPサムネ" />
+              <img
+                src="/front-portfolio/img/wp-thumbnail.webp"
+                alt="WPサムネ"
+              />
             </div>
             <h3>福祉施設サイト（WP構築）</h3>
             <p>テーマファイルカスタマイズ ／ 記事一覧実装 ／ MEO対策</p>
