--- a/work-wp01.html
+++ b/work-wp01.html
@@ -4,33 +4,33 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>福祉施設サイト｜加藤ユウタ｜Web制作ポートフォリオ</title>
-    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="/front-portfolio/style.css" />
   </head>
   <body>
     <header>
       <h1>
         <a href="/"
           ><div class="logo-wrap">
-            <img src="./img/logo.png" alt="加藤ユウタ" /></div
+            <img src="/front-portfolio/img/logo.png" alt="加藤ユウタ" /></div
         ></a>
       </h1>
       <nav>
         <div class="contents-wrap">
-          <a href="index.html#works">制作実績</a>
-          <a href="/contact/">お問い合わせ</a>
+          <a href="/front-portfolio/index.html#works">制作実績</a>
+          <a href="/front-portfolio/contact/">お問い合わせ</a>
         </div>
       </nav>
     </header>
 
     <main>
       <div class="body-wrap work-detail">
-        <a href="/#works" class="back-link">← 戻る</a>
+        <a href="/front-portfolio/#works" class="back-link">← 戻る</a>
 
         <h2 class="work-title">ジョブタス宮の森ホームページ改修</h2>
 
         <div class="img-wrap">
           <img
-            src="../img/wp-thumbnail02.webp"
+            src="/front-portfolio/img/wp-thumbnail02.webp"
             alt="プロジェクトのサムネイル"
             class="work-image"
           />
