--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <nav>
         <div class="contents-wrap navi">
           <a href="#works">制作実績</a>
-          <a href="/front-portfolio/profile.html">プロフィール</a>
-          <a href="/front-portfolio/contact/">お問い合わせ</a>
+          <!-- <a href="/front-portfolio/profile.html">プロフィール</a> -->
+          <a href="mailto:yutaskysazanami@gmail.com">お問い合わせ</a>
         </div>
       </nav>
     </header>
