--- a/work-wp01.html
+++ b/work-wp01.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <h1>
-        <a href="/"
+        <a href="/front-portfolio/index.html"
           ><div class="logo-wrap">
             <img src="/front-portfolio/img/logo.png" alt="加藤ユウタ" /></div
         ></a>
@@ -17,7 +17,8 @@
       <nav>
         <div class="contents-wrap">
           <a href="/front-portfolio/index.html#works">制作実績</a>
-          <a href="/front-portfolio/contact/">お問い合わせ</a>
+          <!-- <a href="/front-portfolio/profile.html">プロフィール</a> -->
+          <a href="mailto:yutaskysazanami@gmail.com">お問い合わせ</a>
         </div>
       </nav>
     </header>
@@ -71,8 +72,13 @@
 
     <footer>
       <div class="wrap">
-        <p>© 2025 加藤ユウタ</p>
+        <a
+          class="link github"
+          href="https://github.com/utough?tab=repositories"
+        ></a>
+        <a class="link mail" href="mailto:yutaskysazanami@gmail.com"></a>
       </div>
+      <p>© 2025 加藤ユウタ</p>
     </footer>
   </body>
 </html>
