自己紹介修正

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <h2>自己紹介</h2>
           <div class="contents-wrap">
             <p>
-              週4リモートで対応いたします。<br />HTML/CSS/JS/WordPressを制作します。<br />20代後半、福岡県在住。
+              HTML/CSS/JS/WordPressを制作します。<br />20代後半、福岡県在住。
             </p>
           </div>
         </section>
