新規ページ追加

--- a/index.html
+++ b/index.html
@@ -52,6 +52,32 @@
               <a href="/front-portfolio/work-wp01.html">詳細</a>
             </div>
           </div>
+          <div class="work-card">
+            <div class="img-wrap">
+              <img
+                src="/front-portfolio/img/lp-thumbnail.webp"
+                alt="WPサムネ"
+              />
+            </div>
+            <h3>umi room（架空LP制作）</h3>
+            <p>javascript / swiper</p>
+            <div class="to_detail-link">
+              <a href="/front-portfolio/work-lp01.html">詳細</a>
+            </div>
+          </div>
+          <div class="work-card">
+            <div class="img-wrap">
+              <img
+                src="/front-portfolio/img/app-thumbnail.webp"
+                alt="myselfyサムネ"
+              />
+            </div>
+            <h3>ヒトリ映エ（SPA制作）</h3>
+            <p>next.js ／ varsel ／ Github / terminal</p>
+            <div class="to_detail-link">
+              <a href="/front-portfolio/work-app01.html">詳細</a>
+            </div>
+          </div>
           <!-- <div class="work-card">
             <img src="images/lp-thumb.jpg" alt="LPサムネ" />
             <h3>LP模写（美容系）</h3>
