リンク更新

--- a/work-lp01.html
+++ b/work-lp01.html
@@ -57,8 +57,11 @@
               </li>
               <li>
                 <strong>URL：</strong
-                ><a href="https://burubea.com/" target="_blank" rel="noopener"
-                  >https://burubea.com/</a
+                ><a
+                  href="https://umiroom.vercel.app/n813/"
+                  target="_blank"
+                  rel="noopener"
+                  >https://umiroom.vercel.app/n813/</a
                 >
               </li>
             </ul>
