レイアウト変更

--- a/index.html
+++ b/index.html
@@ -39,43 +39,45 @@
 
         <section id="works">
           <h2>制作実績</h2>
-          <div class="work-card">
-            <div class="img-wrap">
-              <img
-                src="/front-portfolio/img/wp-thumbnail.webp"
-                alt="WPサムネ"
-              />
+          <div class="work-card-wrap">
+            <div class="work-card">
+              <div class="img-wrap">
+                <img
+                  src="/front-portfolio/img/wp-thumbnail.webp"
+                  alt="WPサムネ"
+                />
+              </div>
+              <h3>福祉施設サイト（WP構築）</h3>
+              <p>テーマファイルカスタマイズ ／ 記事一覧実装 ／ MEO対策</p>
+              <div class="to_detail-link">
+                <a href="/front-portfolio/work-wp01.html">詳細</a>
+              </div>
             </div>
-            <h3>福祉施設サイト（WP構築）</h3>
-            <p>テーマファイルカスタマイズ ／ 記事一覧実装 ／ MEO対策</p>
-            <div class="to_detail-link">
-              <a href="/front-portfolio/work-wp01.html">詳細</a>
+            <div class="work-card">
+              <div class="img-wrap">
+                <img
+                  src="/front-portfolio/img/lp-thumbnail.webp"
+                  alt="WPサムネ"
+                />
+              </div>
+              <h3>umi room（架空LP制作）</h3>
+              <p>javascript / swiper</p>
+              <div class="to_detail-link">
+                <a href="/front-portfolio/work-lp01.html">詳細</a>
+              </div>
             </div>
-          </div>
-          <div class="work-card">
-            <div class="img-wrap">
-              <img
-                src="/front-portfolio/img/lp-thumbnail.webp"
-                alt="WPサムネ"
-              />
-            </div>
-            <h3>umi room（架空LP制作）</h3>
-            <p>javascript / swiper</p>
-            <div class="to_detail-link">
-              <a href="/front-portfolio/work-lp01.html">詳細</a>
-            </div>
-          </div>
-          <div class="work-card">
-            <div class="img-wrap">
-              <img
-                src="/front-portfolio/img/app-thumbnail.webp"
-                alt="myselfyサムネ"
-              />
-            </div>
-            <h3>ヒトリ映エ（SPA制作）</h3>
-            <p>next.js ／ varsel ／ Github / terminal</p>
-            <div class="to_detail-link">
-              <a href="/front-portfolio/work-app01.html">詳細</a>
+            <div class="work-card">
+              <div class="img-wrap">
+                <img
+                  src="/front-portfolio/img/app-thumbnail.webp"
+                  alt="myselfyサムネ"
+                />
+              </div>
+              <h3>ヒトリ映エ（SPA制作）</h3>
+              <p>next.js ／ varsel ／ Github / terminal</p>
+              <div class="to_detail-link">
+                <a href="/front-portfolio/work-app01.html">詳細</a>
+              </div>
             </div>
           </div>
           <!-- <div class="work-card">
