--- a/work-app01.html
+++ b/work-app01.html
@@ -51,10 +51,7 @@
           <h3>制作情報</h3>
           <div class="contents-wrap">
             <ul>
-              <li>
-                <strong>担当範囲：</strong>コーディング /
-                WordPressテンプレート修正
-              </li>
+              <li><strong>担当範囲：</strong>コーディング / デプロイ</li>
               <li>
                 <strong>使用技術：</strong>HTML / CSS / JavaScript / next.js
               </li>
