--- a/work-lp01.html
+++ b/work-lp01.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>福祉施設サイト｜加藤ユウタ｜Web制作ポートフォリオ</title>
+    <title>LPサイト｜加藤ユウタ｜Web制作ポートフォリオ</title>
     <link rel="stylesheet" href="/front-portfolio/style.css" />
   </head>
   <body>
